Use Java 17 Stream#toList() where applicable