@@ -5,7 +5,6 @@ import dev.rosewood.roseloot.loot.context.LootContext;
 import dev.rosewood.roseloot.loot.item.LootItem;
 import dev.rosewood.roseloot.loot.table.LootTableType;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.bukkit.inventory.ItemStack;
 
 public class LootTable implements CheckedLootItemGenerator {
@@ -35,12 +34,12 @@ public class LootTable implements CheckedLootItemGenerator {
         if (!ignoreChecks && !this.check(context))
             return List.of();
 
-        return this.pools.stream().flatMap(x -> x.generate(context).stream()).collect(Collectors.toList());
+        return this.pools.stream().flatMap(x -> x.generate(context).stream()).toList();
     }
 
     @Override
     public List<ItemStack> getAllItems(LootContext context) {
-        return this.pools.stream().flatMap(x -> x.getAllItems(context).stream()).collect(Collectors.toList());
+        return this.pools.stream().flatMap(x -> x.getAllItems(context).stream()).toList();
     }
 
     @Override
